worker.tf
//resource "aws_instance" "container_builder_Ireland" {
//  provider = "aws.aws_provider_eu_west_Ireland"
//  ami = "ami-00035f41c82244dab"
//  instance_type = "t2.nano"
//  private_ip = "10.0.0.12"
//  key_name = "${aws_key_pair.deployer_public_key.key_name}"
//  subnet_id = "${aws_subnet.subnet_Ireland.id}"
//}
